chore: add vitest dependencies and configuration

--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "test": "vitest"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^24.10.1",
+    "vitest": "^4.0.14"
   },
   "peerDependencies": {
     "typescript": "^5"
